# trusted-clawhub-install-gate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
corpus/: README.md
rules/: README.md
skill/: SKILL.md
skill/agents/: openai.yaml
src/clawhub_install_gate/: __init__.py  cli.py  install.py  models.py  policy.py  receipts.py  report.py  scanner.py  usage.py
tests/: conftest.py  test_cli.py  test_scanner.py
